styles/_scroll.scss
.vScroll {
  position: relative;
  overflow: hidden;

  &.dragging {

    .vScroll__content {
      user-select: none;
    }
  }

  &__content {
    transition: all 0.2s;
  }

  &__rail {
    position: absolute;

    &--vertical {
      top: 0;
      right: 0;
      bottom: 0;
      
      width: 10px;
    }

    &--horizontal {
      left: 0;
      right: 0;
      bottom: 0;

      height: 10px;
    }
  }

  &__bar {
    position: absolute;

    background-color: black; 

    &--vertical {
      top: 0;
      right: 0;
      
      width: 10px;
    }

    &--horizontal {
      left: 0;
      bottom: 0;

      height: 10px;
    }
  }
}

